gcc/testsuite/gm2/pim/fail/badtype2.mod
MODULE badtype2 ;

VAR
   x: CARDINAL ;
   ch: CHAR ;
BEGIN
   x := 6 ;
   ch := {7 .. x};
END badtype2.
